--- a/src/components/Agenda/schedules/PastTwentyThree.module.css
+++ b/src/components/Agenda/schedules/PastTwentyThree.module.css
@@ -31,6 +31,7 @@ span {
 }
 
 .schedule-button {
+    opacity: 0;
     min-width: 5%;
     height: 100%;
     border: none;
@@ -77,6 +78,7 @@ span {
     .schedule-button>a {
         font-size: 16px;
         padding: 1%;
+        display: none;
     }
 }
 
