--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -367,8 +367,9 @@ button.nav-toggle {
   .contact-background-image {
     background-repeat: no-repeat;
     width: 100%;
-    min-height: 100%;
+    min-height: 105%;
     position: relative;
+    background-position: center 0%;
   }
 
   .quote-contact {
