--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,556 +1,345 @@
 * {
-    font-family: var(--ff-primary);
-    font-size: 20px;
+  font-family: var(--ff-primary);
+  font-size: 20px;
+}
+
+.blueBG {
+  background-color: var(--midnight-color);
 }
 
 .gallery-home-header {
-    height: 85vh;
-    color: var(--white-color);
+  height: 85vh;
+  color: var(--white-color);
 }
 
 .signature-mob-slide {
-    position: relative;
-    left: 30px;
-    top: 5px;
-    font-family: "Great Vibes", cursive;
-    font-size: 33px;
-    color: var(--white-color);
+  position: relative;
+  left: 30px;
+  top: 5px;
+  font-family: 'Great Vibes', cursive;
+  font-size: 33px;
+  color: var(--white-color);
 }
 
 .signature-mob-footer {
-    position: relative;
-    left: 4%;
-    top: 5px;
-    font-family: "Great Vibes", cursive;
-    font-size: 33px;
-    color: var(--white-color);
+  position: relative;
+  left: 4%;
+  top: 5px;
+  font-family: 'Great Vibes', cursive;
+  font-size: 33px;
+  color: var(--white-color);
 }
 
 .home-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
 }
 
 .gallery-background-image {
-    background-image: url(../../images/Gallery/Gallery-background2.avif);
-    background-size: cover;
-    background-position: center 20%;
-    width: 100%;
-    min-height: 85vh;
-    position: fixed;
-    z-index: -2;
+  background-image: url(../../images/Gallery/Gallery-background2.avif);
+  background-size: cover;
+  background-position: center 20%;
+  width: 100%;
+  min-height: 85vh;
+  position: fixed;
+  z-index: -2;
 }
 
 .gallery-navigation {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding-right: 40px;
-    list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding-right: 40px;
+  list-style: none;
 }
 
-.gallery-icons>a:hover,
+.gallery-icons > a:hover,
 .nav-li:hover {
-    background-color: var(--curry-color);
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: var(--curry-color);
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .nav-li {
-    padding: 3px;
+  padding: 3px;
 }
 
-.gallery-icons>a {
-    padding: 0.4%;
+.gallery-icons > a {
+  padding: 0.4%;
 }
 
 .gallery-icons {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding-right: 3%;
-    gap: 10px;
-    margin-top: 1%;
-    font-size: 25px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 3%;
+  gap: 10px;
+  margin-top: 34.5%;
+  font-size: 25px;
 }
 
 .p-main-background {
-    display: flex;
-    padding-top: 31%;
-    padding-left: 5%;
-    width: 30%;
+  display: flex;
+  padding-top: 31%;
+  padding-left: 5%;
+  width: 30%;
 }
 
 .gallery-h2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 2%;
-    color: var(--tuscan-color);
-    font-weight: bold;
-    font-size: 25px;
-}
-
-.wrapper1 {
-    overflow: hidden;
-    padding-top: 2%;
-}
-
-.images-1 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1%;
-    flex-wrap: nowrap;
-    padding-left: 4.5%;
-    overflow: hidden;
-    max-width: 100%;
-}
-
-.images-2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1%;
-    overflow: hidden;
-}
-
-.images-1>img {
-    width: 860px;
-    height: 571px;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-}
-
-.images-1>img:hover,
-.images-2>img:hover,
-.big-image>img:hover {
-    transform: scale(1.03);
-}
-
-.images-2>img {
-    width: 45%;
-    height: 571px;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-}
-
-.images-1-p {
-    display: flex;
-    align-items: center;
-    padding: 1% 0 1% 4.5%;
-}
-
-.p-1 {
-    color: var(--midnight-color);
-    font-weight: bold;
-    width: 40%;
-    padding-bottom: 1%;
-}
-
-.color-container {
-    padding-top: 2%;
-    background-color: var(--midnight-color);
-}
-
-.p-2 {
-    color: var(--white-color);
-    width: 40%;
-    padding-bottom: 1%;
-}
-
-.big-image {
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.big-image>img {
-    width: 85%;
-    height: 90vh;
-    object-fit: cover;
-    object-position: center 10%;
-    transition: transform 0.3s ease;
-}
-
-.big-image>p {
-    position: absolute;
-    color: var(--white-color);
-    margin: 38% 58% 0 0;
-    z-index: 30;
-}
-
-div.big-image2>p {
-    position: absolute;
-    color: var(--white-color);
-    padding-top: 38%;
-    padding-left: 6%;
-}
-
-.big-image2>img {
-    width: 100%;
-    height: 90vh;
-    object-fit: cover;
-    object-position: center 82%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2%;
+  color: var(--tuscan-color);
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .gallery-footer {
-    background-color: rgba(33, 49, 65, 255);
-    width: 100%;
-    height: 110px;
+  background-color: rgba(33, 49, 65, 255);
+  width: 100%;
+  height: 110px;
 }
 
-.gallery-footer>div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 1.5%;
+.gallery-footer > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.5%;
 }
 
-.gallery-footer>div>img {
-    padding-left: 2%;
+.gallery-footer > div > img {
+  padding-left: 2%;
 }
 
-.gallery-footer>p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--nickel-color);
+.gallery-footer > p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--nickel-color);
 }
 
 .footer-icons {
-    display: flex;
-    align-items: center;
-    padding-right: 8%;
-    gap: 45%;
-    font-size: 25px;
+  display: flex;
+  align-items: center;
+  padding-right: 8%;
+  gap: 45%;
+  font-size: 25px;
 }
 
-.footer-icons>a:hover {
-    background-color: var(--curry-color);
+.footer-icons > a:hover {
+  background-color: var(--curry-color);
 }
 
-.footer-icons>a {
-    padding: 8%;
+.footer-icons > a {
+  padding: 8%;
 }
 
 button.button-nav-mobile,
 .footer-slide,
 .icons-mobile,
 button.nav-toggle {
-    display: none;
+  display: none;
 }
 
 .line {
-    display: block;
-    width: 50%;
-    height: 2px;
-    background-color: var(--white-color);
-    margin-bottom: 7px;
+  display: block;
+  width: 50%;
+  height: 2px;
+  background-color: var(--white-color);
+  margin-bottom: 7px;
 }
 
 @media only screen and (max-width: 480px) {
+  .p-main-background {
+    display: flex;
+    padding-top: 0%;
+    padding-left: 3%;
+    width: 100%;
+    color: var(--white-color);
+    top: 35%;
+    position: absolute;
+  }
 
-    .images-1>img:hover,
-    .images-2>img:hover,
-    .big-image>img:hover {
-        transform: none;
+  .p-main-background > p {
+    font-size: 15px;
+  }
+
+  .gallery-icons {
+    display: none;
+    position: absolute;
+  }
+
+  .gallery-navigation {
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    /* Initially hide the menu off-screen */
+    min-width: 80%;
+    min-height: 100%;
+    background-color: var(--midnight-color);
+    transition: right 0.4s ease;
+    z-index: 20;
+    padding-right: 0;
+  }
+
+  .gallery-navigation.active {
+    display: flex;
+    right: 0;
+    z-index: 20;
+    min-width: 80%;
+    min-height: 100%;
+    position: fixed;
+
+    .line {
+      width: 100%;
     }
+  }
 
-    .p-main-background {
-        display: flex;
-        padding-top: 0%;
-        padding-left: 3%;
-        width: 100%;
-        color: var(--white-color);
-        top: 35%;
-        position: absolute;
-    }
+  .footer-slide {
+    display: block;
+    left: -100%;
+    transition: left 0.4s ease;
+    z-index: 22;
+    position: absolute;
+    top: 91%;
+    font-size: 15px;
+  }
 
-    .p-main-background>p {
-        font-size: 15px;
-    }
+  .footer-slide.active {
+    left: 43%;
+    transition: left 0.4s ease;
+    z-index: 22;
+    position: fixed;
+  }
 
-    .gallery-icons {
-        display: none;
-        position: absolute;
-    }
+  div.home-header > .signature-mob-slide {
+    display: block;
+    position: absolute;
+    top: 3%;
+    left: -100%;
+    transition: left 0.4s ease;
+    z-index: 21;
+    font-size: 25px;
+  }
 
-    .gallery-navigation {
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: -100%;
-        /* Initially hide the menu off-screen */
-        min-width: 80%;
-        min-height: 100%;
-        background-color: var(--midnight-color);
-        transition: right 0.4s ease;
-        z-index: 20;
-        padding-right: 0;
-    }
+  div.home-header > .signature-mob-slide.active {
+    display: block;
+    transition: left 0.4s ease;
+    left: 28%;
+    z-index: 21;
+    position: fixed;
+  }
 
-    .gallery-navigation.active {
-        display: flex;
-        right: 0;
-        z-index: 20;
-        min-width: 80%;
-        min-height: 100%;
-        position: fixed;
+  .icons-mobile.active {
+    left: 50%;
+    transition: left 0.4s ease;
+    position: fixed;
+  }
 
-        .line {
-            width: 100%;
-        }
-    }
+  button.nav-toggle {
+    display: block;
+    min-width: 25px;
+    height: 25px;
+    background-color: transparent;
+    position: absolute;
+    top: 3%;
+    right: 0;
+    left: 90%;
+    /* Show the menu toggle button */
+  }
 
-    .footer-slide {
-        display: block;
-        left: -100%;
-        transition: left 0.4s ease;
-        z-index: 22;
-        position: absolute;
-        top: 91%;
-        font-size: 15px;
-    }
+  .nav-li {
+    padding: 10px;
+    margin-bottom: 15%;
+  }
 
-    .footer-slide.active {
-        left: 43%;
-        transition: left 0.4s ease;
-        z-index: 22;
-        position: fixed;
-    }
+  .mobile-li {
+    margin-top: 35%;
+    padding-right: 50%;
+  }
 
-    div.home-header>.signature-mob-slide {
-        display: block;
-        position: absolute;
-        top: 3%;
-        left: -100%;
-        transition: left 0.4s ease;
-        z-index: 21;
-        font-size: 25px;
-    }
+  button.button-nav-mobile {
+    display: block;
+    min-width: 25px;
+    height: 25px;
+    background-color: transparent;
+    margin-top: 5%;
+    margin-left: 85%;
+  }
 
-    div.home-header>.signature-mob-slide.active {
-        display: block;
-        transition: left 0.4s ease;
-        left: 28%;
-        z-index: 21;
-        position: fixed;
-    }
+  .icons-mobile {
+    display: flex !important;
+    align-items: center;
+    position: absolute;
+    top: 85%;
+    padding: 0;
+    z-index: 20;
+    gap: 30%;
+    left: -100%;
+    transition: left 0.4s ease;
+  }
 
-    .icons-mobile.active {
-        left: 50%;
-        transition: left 0.4s ease;
-        position: fixed;
-    }
+  .gallery-home-header {
+    height: 40vh;
+    color: var(--white-color);
+  }
 
-    button.nav-toggle {
-        display: block;
-        min-width: 25px;
-        height: 25px;
-        background-color: transparent;
-        position: absolute;
-        top: 3%;
-        right: 0;
-        left: 90%;
-        /* Show the menu toggle button */
-    }
+  .home-header {
+    padding: 0;
+    height: 2%;
+  }
 
-    .nav-li {
-        padding: 10px;
-        margin-bottom: 15%;
-    }
+  .gallery-background-image {
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 100%;
+    position: relative;
+  }
 
-    .mobile-li {
-        margin-top: 35%;
-        padding-right: 50%;
-    }
+  .gallery-h2 {
+    padding-top: 5%;
+  }
 
-    button.button-nav-mobile {
-        display: block;
-        min-width: 25px;
-        height: 25px;
-        background-color: transparent;
-        margin-top: 5%;
-        margin-left: 85%;
-    }
+  .gallery-footer > p {
+    font-size: 13px;
+  }
 
-    .icons-mobile {
-        display: flex !important;
-        align-items: center;
-        position: absolute;
-        top: 85%;
-        padding: 0;
-        z-index: 20;
-        gap: 30%;
-        left: -100%;
-        transition: left 0.4s ease;
-    }
+  .gallery-footer > div > img {
+    padding-left: 0;
+  }
 
-    .gallery-home-header {
-        height: 40vh;
-        color: var(--white-color);
-    }
+  .gallery-footer > div {
+    padding-top: 8%;
+    padding-right: 5%;
+    padding-bottom: 3%;
+  }
 
-    .home-header {
-        padding: 0;
-        height: 2%;
-    }
+  .signature-mob-slide {
+    font-size: 23px;
+  }
 
-    .gallery-background-image {
-        background-repeat: no-repeat;
-        width: 100%;
-        min-height: 100%;
-        position: relative;
-    }
+  .signature-mob-footer {
+    position: relative;
+    left: 30px;
+    top: 5px;
+    font-family: 'Great Vibes', cursive;
+    font-size: 23px;
+    color: var(--white-color);
+  }
 
-    .wrapper1 {
-        overflow: hidden;
-        padding-top: 5%;
-        padding-bottom: 5%;
-    }
+  .footer-icons {
+    display: flex;
+    align-items: center;
+    padding-right: 11%;
+    gap: 13%;
+    font-size: 25px;
+  }
 
-    .images-1 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 1%;
-        flex-wrap: nowrap;
-        padding-left: 4.5%;
-        overflow: hidden;
-        max-width: 100%;
-    }
-
-    .images-2 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 1%;
-        flex-wrap: nowrap;
-        padding-left: 4.5%;
-        overflow: hidden;
-        max-width: 100%;
-    }
-
-    .images-1>img {
-        width: 95%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .images-2>img {
-        width: 90%;
-        height: 269px;
-        object-fit: cover;
-    }
-
-    .images-1-p {
-        display: flex;
-        align-items: center;
-        padding: 1% 0 1% 4.5%;
-    }
-
-    .p-1 {
-        color: var(--midnight-color);
-        font-weight: bold;
-        width: 90%;
-        padding-bottom: 1%;
-        font-size: 15px;
-    }
-
-    .color-container {
-        padding-top: 2%;
-        background-color: var(--midnight-color);
-    }
-
-    .p-2 {
-        color: var(--white-color);
-        width: 80%;
-        padding-bottom: 1%;
-        font-size: 15px;
-    }
-
-    .big-image {
-        max-width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .big-image>img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center 10%;
-    }
-
-    .big-image>p {
-        position: absolute;
-        color: var(--white-color);
-        margin: 50% 0 0 50%;
-        font-size: 15px;
-    }
-
-    div.big-image2>p {
-        position: absolute;
-        color: var(--white-color);
-        padding-top: 5%;
-        padding-left: 5%;
-        font-size: 15px;
-        width: 90%;
-    }
-
-    .big-image2>img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center 82%;
-    }
-
-
-    .gallery-h2 {
-        padding-top: 5%;
-    }
-
-    .gallery-footer>p {
-        font-size: 13px;
-    }
-
-    .gallery-footer>div>img {
-        padding-left: 0;
-    }
-
-    .gallery-footer>div {
-        padding-top: 8%;
-        padding-right: 5%;
-        padding-bottom: 3%;
-    }
-
-    .signature-mob-slide {
-        font-size: 23px;
-    }
-
-    .signature-mob-footer {
-        position: relative;
-        left: 30px;
-        top: 5px;
-        font-family: "Great Vibes", cursive;
-        font-size: 23px;
-        color: var(--white-color);
-    }
-
-    .footer-icons {
-        display: flex;
-        align-items: center;
-        padding-right: 11%;
-        gap: 13%;
-        font-size: 25px;
-    }
-
-    .footer-icons>a {
-        padding: 8%;
-    }
+  .footer-icons > a {
+    padding: 8%;
+  }
 }
