--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,13 @@
 html,
 body {
   height: 100%;
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+*/
+  scrollbar-width: none; /*  Firefox  */
 }
 
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none; /*  Safari and Chrome  */
 }
 
 a {
@@ -64,3 +64,328 @@ nav .active {
 .show {
   opacity: 1;
 }
+
+/* css for slider */
+
+.overlayText {
+  color: var(--white-color);
+  position: absolute;
+  bottom: -9%;
+  left: 0.4%;
+  display: flex;
+  align-items: center;
+  width: 96.7%;
+  justify-content: space-between;
+  padding: 0.7%;
+  opacity: 0;
+  transition: all 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 1);
+}
+
+.overlayTextOne {
+  color: var(--white-color);
+  position: absolute;
+  margin-top: 35%;
+  display: flex;
+  align-items: center;
+  width: 84.7%;
+  justify-content: space-between;
+  padding: 0.7%;
+  opacity: 0;
+  transition: all 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 1);
+}
+
+.overlayTextTwo {
+  color: var(--white-color);
+  position: absolute;
+  left: 5.3%;
+  margin-top: -6%;
+  display: flex;
+  align-items: center;
+  width: 44%;
+  justify-content: space-between;
+  padding: 0.7%;
+  opacity: 0;
+  transition: all 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 1);
+}
+
+.overlayTextSecond {
+  color: var(--white-color);
+  position: absolute;
+  left: 50.8%;
+  margin-top: -6%;
+  display: flex;
+  align-items: center;
+  width: 44%;
+  justify-content: space-between;
+  padding: 0.7%;
+  opacity: 0;
+  transition: all 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 1);
+}
+
+.swiper-slide:hover .overlayText {
+  opacity: 1;
+}
+
+.firstBigImage .imagesOne img {
+  object-position: center 20%;
+  width: 85%;
+}
+
+.imagesOne {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2%;
+}
+
+.imagesOne img {
+  width: 100%;
+  height: 90vh;
+  object-fit: cover;
+  object-position: center 82%;
+}
+
+.imagesSlideTwo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1%;
+  padding-top: 2%;
+}
+
+.imagesSlideTwo img {
+  height: 571px;
+  object-fit: cover;
+  width: 93vh;
+  transition: all 0.3s ease;
+}
+
+.hoverContainer:hover .overlayTextSecond,
+.hoverContainer:hover .overlayTextTwo,
+.imagesOne:hover .overlayTextOne {
+  opacity: 1;
+}
+
+.hoverContainer:hover img {
+  cursor: pointer;
+  /* transform: scale(1.03); */
+}
+
+.slider_fix {
+  z-index: 11;
+}
+
+.container {
+  max-width: 124vw;
+  padding: 1vh 0vw;
+  margin: 0 auto;
+  background-color: transparent;
+}
+
+.swiper_container {
+  height: 72vh;
+  padding: 2vh 0;
+  position: relative;
+}
+
+.swiper-slide {
+  width: 45vw;
+  height: 52vh;
+  position: relative;
+  transition: transform 0.3s ease;
+}
+
+.swiper-slide:hover {
+  transform: scale(1.1);
+}
+
+.swiper-slide img {
+  width: 44vw;
+  height: 60vh;
+  border-radius: 2vh;
+  object-fit: cover;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  position: relative;
+  bottom: 2vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-controler .swiper-button-next {
+  left: 52.5vw !important;
+  transform: translateX(-50%) !important;
+}
+
+.swiper-pagination {
+  position: relative;
+  width: 15vw !important;
+  bottom: 1vh;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+  width: 0.7vw;
+  height: 1.5vh;
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: var(--midnight-color);
+}
+
+.container.midnight-bg .swiper-pagination .swiper-pagination-bullet-active {
+  background: var(--white-color);
+}
+
+@media (max-width: 500px) {
+  .overlayText {
+    bottom: 25%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    padding: 2.5%;
+    opacity: 0;
+  }
+
+  .overlayTextOne {
+    margin-top: 50%;
+    display: flex;
+    align-items: center;
+    width: 95%;
+    justify-content: space-between;
+    padding: 0.7%;
+    opacity: 0;
+  }
+
+  .overlayText h3,
+  .overlayTextOne h3 {
+    font-size: 13px;
+  }
+
+  .overlayText p,
+  .overlayTextOne p {
+    font-size: 12px;
+  }
+
+  .swiper_container {
+    height: 32vh;
+    padding: 0 0 0 0;
+    position: relative;
+  }
+  .swiper-slide {
+    width: 90vw !important;
+    height: 35vh !important;
+  }
+  .swiper-slide img {
+    width: 90vw !important;
+    height: 28vh !important;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet {
+    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+    width: 3vw;
+    height: 1.5vh;
+  }
+
+  .slider-controler {
+    padding-top: 0%;
+  }
+
+  .imagesOne {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2%;
+  }
+
+  .imagesOne img {
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
+    object-position: center 82%;
+  }
+
+  .imagesSlideTwo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1%;
+  }
+
+  .imagesSlideTwo img {
+    width: 45%;
+    height: 571px;
+    object-fit: cover;
+  }
+
+  .imagesOne {
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3%;
+  }
+
+  .imagesOne > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center 10%;
+  }
+
+  .firstBigImage .imagesOne img {
+    object-position: center 20%;
+    width: 100%;
+  }
+
+  .container {
+    max-width: 124vw;
+    padding: 3vh 0 1vh 0;
+    margin: 0 auto;
+    background-color: transparent;
+  }
+}
+
+/* @media (max-width: 990px) {
+  .slider-controler .swiper-button-next {
+    left: 70vw !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-next {
+    left: 80vw !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-prev {
+    left: 30vw !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-prev {
+    left: 20vw !important;
+    transform: translateX(-20%) !important;
+  }
+} */
