--- a/src/index.css
+++ b/src/index.css
@@ -362,6 +362,14 @@ nav .active {
   }
 }
 
+@media (max-width: 405px) {
+  .swiper-pagination .swiper-pagination-bullet {
+    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+    width: 2.5vw;
+    height: 1.5vh;
+  }
+}
+
 /* @media (max-width: 990px) {
   .slider-controler .swiper-button-next {
     left: 70vw !important;
@@ -376,12 +384,7 @@ nav .active {
   }
 }
 
-@media (max-width: 990px) {
-  .slider-controler .swiper-button-prev {
-    left: 30vw !important;
-    transform: translateX(-30%) !important;
-  }
-}
+
 
 @media (max-width: 450px) {
   .slider-controler .swiper-button-prev {
