reverse column new project

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -587,6 +587,10 @@ button.nav-toggle {
     flex-direction: column-reverse;
   }
 
+  .project-container-box.new-mar {
+    flex-direction: column;
+  }
+
   .project-container-box:nth-child(1) img {
     height: auto;
   }
