new slides, new dates, new quotes, new profile

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -42,7 +42,7 @@
 }
 
 .about-background-image {
-  background-image: url(../../images/About/about-pozadina.avif);
+  background-image: url(../../images/About/profilnaAbout.jpg);
   background-size: cover;
   background-position: center 5%;
   width: 100%;
