--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -42,7 +42,7 @@
 }
 
 .home-background-image {
-    background-image: url(../../images/home-page-1.avif);
+    background-image: url(../../images/Gallery/odrazana.jpeg);
     background-size: cover;
     background-position: center 30%;
     background-repeat: no-repeat;
